# raytracer

./: .gitignore  CMakeLists.txt  Makefile  Project.sln  Project.vcxproj  Project.vcxproj.filters  aacubeshape.cpp  aacubeshape.h  aaplaneshape.cpp  aaplaneshape.h  alignedlist.cpp  alignedlist.h  atomicint.cpp  atomicint.h  bitmap.cpp  bitmap.h  bridge.mtl  camera.cpp  camera.h  cube.mtl  cube_div.mtl  defs.h  directionallight.cpp  directionallight.h  glimagedisplay.cpp  glimagedisplay.h  kdcontainable.cpp  kdcontainable.h  kdtree.cpp  kdtree.h  light.cpp  light.h  logger.cpp  logger.h  loggers.cpp  loggers.h  main.cpp  main.h  metaballshape.cpp  metaballshape.h  (+46 more)
content/models/: box.fbx  box_hole.fbx  dragon.fbx  plane.fbx  sphere.fbx  sponza.mtl  teapot.fbx
content/scenes/: scene0.scn
include/: bitmap.h  bmpimage.h  camera.h  cube.h  defs.h  directionallight.h  fbxloader.h  glimagedisplay.h  image.h  kdnode.h  kdtree.h  light.h  material.h  net.h  path.h  plane.h  pointlight.h  poly.h  polygon.h  raybuffer.h  raytracer.h  raytracersettings.h  rt_defs.h  rtmath.h  scene.h  shader.h  shape.h  sphere.h  timer.h
include/core/: brdf.h  camera.h  material.h  raybuffer.h  raytracer.h  raytracersettings.h  scene.h  triangle.h  triangle.inl
include/host/: glimagedisplay.h
include/image/: bmpimage.h  image.h  sampler.h
include/kdtree/: kdbuilder.h  kdmedianbuilder.h  kdnode.h  kdsahbuilder.h  kdstack.h  kdtree.h  kdtree.inl
include/light/: directionallight.h  light.h  pointlight.h
include/materials/: pbrmaterial.h
include/math/: aabb.h  frustum.h  macro.h  matrix.h  plane.h  ray.h  sampling.h  sphere.h  vector.h
include/net/: client.h  net.h  protocol.h  server.h
include/preview/: imgui.h  preview.h  solidgeom.h  transformgizmo.h
include/scenes/: cornellscene.h  simplescene.h  sponzascene.h
include/shader/: brdf.h  pbrshader.h  phongshader.h  shader.h
include/util/: align.h  fbxloader.h  glimagedisplay.h  imagedisplay.h  imageloader.h  meshloader.h  path.h  queue.h  stack.h  timer.h  vector.h
prebuilt/: CMakeLists.txt  README.txt  Updating_Libraries.txt  build.txt
prebuilt/OSX/lib/: libGLEW.1.12.0.dylib  libglfw.3.1.dylib
prebuilt/windows/lib/: assimp-vc140-mt.lib  jpeg.lib  lib_json.lib  zlibstatic.lib
prebuilt/windows/lib/pkgconfig/: assimp.pc
prebuilt/windows/x64/lib/Debug/: freetype.lib  glew32d.lib  glfw3dll.lib  lib_json.lib  libpng16d.lib  zlibd.lib
prebuilt/windows/x64/lib/Release/: freetype.lib  glew32.lib  glfw3dll.lib  libpng16.lib  zlib.lib
shaders/: jsonparser.sublime-project  jsonparser.sublime-workspace
src/: bitmap.cpp  bmpimage.cpp  camera.cpp  cube.cpp  directionallight.cpp  fbxloader.cpp  glimagedisplay.cpp  image.cpp  kdnode.cpp  kdtree.cpp  light.cpp  main.cpp  material.cpp  path.cpp  plane.cpp  pointlight.cpp  poly.cpp  polygon.cpp  raytracersettings.cpp  rtmath.cpp  scene.cpp  shader.cpp  shape.cpp  sphere.cpp  testvectors.cpp  timer.cpp
src/core/: camera.cpp  material.cpp  raytracer.cpp  raytracersettings.cpp  scene.cpp  triangle.cpp
src/host/: glimagedisplay.cpp  main.cpp
src/image/: bmpimage.cpp  image.cpp  sampler.cpp
src/kdtree/: kdbuilder.cpp  kdmedianbuilder.cpp  kdnode.cpp  kdsahbuilder.cpp  kdtree.cpp
src/light/: directionallight.cpp  light.cpp  pointlight.cpp
src/materials/: pbrmaterial.cpp
src/net/: client.cpp  net.cpp  protocol.cpp  server.cpp
src/preview/: ImGuizmo.cpp  imgui.cpp  imgui_draw.cpp  preview.cpp  pv_fragment.glsl  pv_vertex.glsl  solid_fragment.glsl  solid_vertex.glsl  solidgeom.cpp  transformgizmo.cpp  ui_fragment.glsl  ui_vertex.glsl
src/raytracer/: main.cpp
src/scenes/: cornellscene.cpp  simplescene.cpp  sponzascene.cpp
src/shader/: pbrshader.cpp  phongshader.cpp  shader.cpp
src/standalone/: main.cpp
src/util/: fbxloader.cpp  glimagedisplay.cpp  imagedisplay.cpp  imageloader.cpp  meshloader.cpp  path.cpp  queue.cpp  timer.cpp
src/worker/: main.cpp
